Fix applying font styles to text in vector text tool

BUG:392343

* Apply font style as combination of font weight and italization
* Show correct font style and font properties (bold, italic, etc) on
  cursor change or font style update
* Fix text changing format and loosing whitespaces while switching
  from Rich Text to Svg Source tab

(cherry picked from commit 371894feca52dec75ac2c33aebccbfe7ba75b6a7)